[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femtovg = "0.9.2"
winit = "0.30.5"
glutin = "0.32.1"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
array2d = "0.3.2"
rand = "0.8.5"
thiserror = "1.0.63"
num = "0.4.3"


[profile.dev.package."*"]
opt-level = 3
[profile.dev.build-override]
opt-level = 3
[profile.dev]
opt-level = 1